--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <img class="rounded-circle" src="img/music.png"  alt="Generic placeholder image" width="140" height="140">
             <h2>心情點唱機</h2>
             <p>還會想繼續聽下去&#10025;<br><br></p>
-            <p><a class="btn btn-secondary" href="youtube_player/index.html" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="youtube_player/index2.html" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
